Fix mobile navbar spacing II

--- a/foodhub-client/src/styles/mobileNavbar.css
+++ b/foodhub-client/src/styles/mobileNavbar.css
@@ -110,7 +110,11 @@
     }
 
     .navbar-left {
-        flex-grow: 1;
+        display: flex !important;
+        justify-content: space-between !important;
+        align-items: center !important;
+        width: 100% !important;
+        padding: 0 8px !important;
     }
 
     body {
@@ -120,6 +124,7 @@
     .hamburger {
         display: block !important;
         margin-right: 12px;
+        margin-left: auto !important;
         font-size: 26px;
         background: none;
         z-index: 9999;
